Initial work to get modular jars